# car-price-model

./: .gitattributes  .gitignore  LICENSE.md  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/logs/: pipeline.log.2026-06-12
backend/models/: best_params.json  car_price_model.joblib  encoder.joblib
backend/notebooks/: EDA.ipynb
backend/src/car_price_model/: main.py  utils.py
backend/src/car_price_model/api/: app.py  dependencies.py  enums.py  logging.py  predict.py  schemas.py
backend/src/car_price_model/data_io/: reading.py  writing.py
backend/src/car_price_model/modeling/: car_price_model.py  tune.py
backend/src/car_price_model/pipelines/: cleaning.py  modeling.py  pipeline.py  processing.py  summary.py
backend/src/car_price_model/processing/: cleaning.py  encoder.py  features.py  outliers.py
backend/src/car_price_model/processing/mappings/: color.json  cylinder_layout.json  cylinders.json  fuel.json  gearbox.json  location.json
backend/src/car_price_model/statistics/: summary.py
backend/src/car_price_model/utils/: decorators.py  logging.py  utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/public/models/detailed/: sedan.glb  sport.glb  suv.glb
frontend/src/: App.tsx  index.css  summary.json
frontend/src/api/: predict.ts
frontend/src/constants/: brands.ts  carModels.ts
frontend/src/hooks/: useIsMobile.ts
frontend/src/pages/: PredictPage.tsx
frontend/src/types/: api.ts
(+21 files in other folders)
